--- a/product-preview-card-component-main/index.css
+++ b/product-preview-card-component-main/index.css
@@ -33,9 +33,51 @@ body {
 }
 
 .text2 {
-  padding-top: 100px;
-  margin-left: 400px;
+  padding-top: 80px;
+  margin-left: 380px;
   width: 300px;
-  font-size: 30px;
+  font-size: 40px;
+  font-family: "Fraunces", serif;
+}
+
+.text3 {
   font-family: "Montserrat", sans-serif;
+  padding-top: 25px;
+  margin-left: 373px;
+  color: #6a6b6f;
+  font-size: 15px;
+  word-spacing: 2px;
+  padding-right: 70px;
+  line-height: 25px;
+}
+.priceLine {
+  margin-left: 370px;
+  padding-top: 30px;
+}
+.currentPrice {
+  float: left;
+  font-family: "Fraunces", serif;
+  color: #347d62;
+  font-size: 37px;
+}
+
+.oldPrice {
+  text-decoration-line: line-through;
+  padding-top: 12px;
+  margin-left: 180px;
+  font-size: 14px;
+  color: #6a6b6f;
+}
+
+.button {
+  background-color: #1a4031;
+  height: 50px;
+  width: 250px;
+  margin-left: 373px;
+  margin-top: 30px;
+  border-radius: 7px;
+}
+
+.text4 {
+  text-align: center;
 }
