--- a/product-preview-card-component-main/index.css
+++ b/product-preview-card-component-main/index.css
@@ -14,6 +14,7 @@ body {
 img {
   height: 100%;
   border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
   float: left;
 }
 
@@ -21,6 +22,57 @@ img {
   font-family: "Montserrat", sans-serif;
   margin-left: 360px;
   padding-top: 25px;
+  font-size: 13px;
+  letter-spacing: 4px;
+  color: #7b7a85;
+}
+
+.text2 {
+  margin-left: 360px;
+  font-family: "Fraunces", serif;
+  padding-top: 15px;
+  padding-right: 50px;
+  font-size: 35px;
+  line-height: 35px;
+}
+
+.text3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  color: #7b7a85;
+  margin-left: 360px;
+  padding-top: 17px;
+  padding-right: 50px;
+  line-height: 20px;
+}
+
+.priceLine {
+  margin-left: 360px;
+  padding-top: 30px;
+}
+
+.currentPrice {
+  float: left;
+  font-family: "Fraunces", serif;
+  color: #3f7f69;
+  font-size: 45px;
+}
+
+.oldPrice {
+  font-family: "Montserrat", sans-serif;
+  text-decoration: line-through;
+  color: #7b7a85;
+  padding-top: 16px;
+  padding-left: 200px;
   font-size: 15px;
-  letter-spacing: 3px;
+}
+
+button {
+  background-color: #184131;
+  border: solid 0px #184131;
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
+  margin-left: 360px;
+  padding-top: 10px;
 }
